# probe

./: .gitignore  .mcp.json.example  AGENTS.md  README.md  plan.md  pyproject.toml
deploy/: docker-compose.yml
docs/: RECON_REPORT.md
probe/: __init__.py  __main__.py  cli.py  config.py  indexing.py  retrieval.py  server.py  types.py  watcher.py
probe/chunking/: __init__.py  text.py  tree_sitter.py
probe/storage/: __init__.py  manifest.py  qdrant.py
services/reranker/: Dockerfile  main.py  requirements.txt
tests/: __init__.py  conftest.py  test_chunking.py  test_cli.py  test_config.py  test_server.py  test_storage.py  test_watcher.py
