[project]
name = "probe"
version = "0.1.0"
description = "RAG memory for agentic coders via MCP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Efrain Torres" }]
keywords = ["mcp", "rag", "code-search", "embeddings", "qdrant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "mcp>=1.25,<2",
    "qdrant-client>=1.15.2",
    "tree-sitter-language-pack>=0.7",
    "pydantic>=2.0",
    "typer>=0.9",
    "httpx>=0.27",
    "watchfiles>=1.0",
    "aiosqlite>=0.20",
    "rich>=13.0",
]

[project.scripts]
probe = "probe.cli:app"

[project.urls]
Homepage = "https://github.com/EfrainTorres/probe"
Repository = "https://github.com/EfrainTorres/probe"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # Allow function calls in argument defaults (Typer pattern)

[tool.ruff.lint.per-file-ignores]
"services/*" = ["B904"]  # Allow raise without from in service code

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
